--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <h1>Selamat Datang</h1>
         </header>
         <article>
-            <p>di warung kopi online</p>
+            <p>di warung kopi online <span id="nama">Anda</span></p>
+            <button id="tombol"></button>
             <div class="banner"><img src="./assets/banner.jpg"></div>
         </article>
     </section>
@@ -106,6 +107,6 @@
     <footer>
         <p>Dibuat oleh Uhuy - 2024</p>
     </footer>
-    
+  <script src="js/script.js"></script>
 </body>
 </html>
