--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             </div>
             <div class="form-result">
                 <div class="form-output">
+                  <p id="hasil-error"></p>
                   <p>
                     <span id="hasil-tglsaiki"></span><br><br>
                     <span id="hasil-nama"></span><br>
