--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </header>
         <article>
             <p>di warung kopi online <button id="tombol">klik!</button></p>
-            <div class="banner"><img src="./assets/banner.jpg"></div>
+            <div class="banner"><img src="./assets/banner1.jpg"></div>
+            <div class="banner"><img src="./assets/banner2.jpg"></div>
+            <div class="banner"><img src="./assets/banner3.jpg"></div>
         </article>
     </section>
     <hr>
